--- a/win32/solution/ZNC.vcxproj.filters
+++ b/win32/solution/ZNC.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="..\platform\znc_msvc_dll_main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\platform\win_utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platform\win_registry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\znc\defines.h">
@@ -195,6 +201,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\znc\Csocket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platform\znc_msvc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
