Import existing ZNC_Tray project.

--- a/win32/solution/ZNC.vcxproj
+++ b/win32/solution/ZNC.vcxproj
@@ -240,6 +240,7 @@
     <ClInclude Include="..\..\include\znc\ZNCDebug.h" />
     <ClInclude Include="..\..\include\znc\ZNCString.h" />
     <ClInclude Include="..\platform\znc_msvc.h" />
+    <ClInclude Include="..\platform\znc_msvc_shared.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
