--- a/win32/solution/ZNC.vcxproj.filters
+++ b/win32/solution/ZNC.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="..\platform\win_registry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\Query.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\znc\defines.h">
@@ -207,6 +210,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\platform\znc_msvc_shared.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\znc\Query.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
